# hutch

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  hutch-init  hutch.conf.sample  hutch.mariadb.sql  hutch.sqlite3.sql
.github/workflows/: ccpp.yml  codeql-analysis.yml
doc/: FRONT-END.md  INSTALL.md
docs/: API.md  FRONT-END.md  INSTALL.md  hutch-init  hutch.conf.sample  hutch.mariadb.sql  hutch.postgre.sql  hutch.service  hutch.sqlite3.sql
docs/images/: Decrypt_coins.xml  Encrypt_coins.xml  Get_safe_key.xml  Store_safe_key.xml
src/: Makefile  coin.c  hutch.c  hutch.h  iddawc_resource.c  iddawc_resource.h  profile.c  safe.c  safe_key.c  static_file_callback.c  webservice.c
test/: Makefile  coin.c  hutch-ci.conf  hutch_coin.c  hutch_profile.c  hutch_safe.c  profile.c  run_test.sh  safe.c  safe_key.c  unit-tests.c  unit-tests.h
tests/: Makefile  hutch_coin.c  hutch_profile.c  hutch_safe.c
webapp/: README.md  config.json.sample  fa-list.json  hutch.js  hutch.js.LICENSE.txt  index.html  package.json  vendors~hutch.js  webpack.config.js  words-en.json  words-fr.json
webapp-source/: README.md  package.json  webpack.config.js
webapp-source/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts  app.routing.ts
webapp-source/src/app/coin/: coin.component.html  coin.component.ts
webapp-source/src/app/home/: home.component.html  home.component.ts
webapp-source/src/app/modal/: confirm.component.ts  edit-profile.component.ts  edit-safe.component.ts  edit-tags.component.ts  generate-password.component.ts  manage-safe.component.ts
webapp-source/src/app/oauth2-connect/: oauth2-connect.component.ts  oauth2-connect.service.ts
webapp-source/src/app/safe/: safe.component.html  safe.component.scss  safe.component.ts
webapp-source/src/app/shared/: coin.ts  hutch-api.service.ts  hutch-coin.service.ts  hutch-crypto.service.ts  hutch-observe.service.ts  hutch-profile.service.ts  hutch-safe.service.ts  hutch-store.service.ts  safe.ts
webapp-source/src/public/: config.json.sample  index.html
webapp-source/src/public/i18n/: en.json  fr.json
webapp-src/: .gitignore  Makefile  package.json  parse-locales.js  webpack.config.js  webpack.dev.config.js
webapp-src/css/: hutch.css
webapp-src/locales/en/: translations.json
webapp-src/locales/fr/: translations.json
webapp-src/src/: hutch.js
webapp-src/src/Hutch/: App.js  Coin.js  CoinEditElementFile.js  CoinEditElementMisc.js  CoinEditElementPassword.js  CoinEditElementUrl.js  CoinEditElementUsername.js  CoinElementFile.js  CoinElementMisc.js  CoinElementPassword.js  CoinElementSecretQuestions.js  CoinElementSecretQuestionsRow.js  CoinElementSecretQuestionsRowEdit.js  CoinElementUrl.js  CoinElementUsername.js  Config.js  Confirm.js  ConnectButton.js  JwkInput.js  JwkOutput.js  LangDropdown.js  ManageExportData.js  ModalCoinEdit.js  ModalCoinElementTags.js  ModalCoinExport.js  ModalGeneratePassword.js  ModalManageSafe.js  ModalOfflineSafe.js  ModalQrCode.js  ModalSafeKey.js  ModalSafeKeyPassword.js  ModalSafeUnlock.js  Profile.js  ProfileEdit.js  ProfileView.js  Safe.js  SafeEdit.js  SafeView.js  TopMenu.js
webapp-src/src/app/: app.component.ts  app.module.ts  app.routing.ts
webapp-src/src/app/coin/: coin.component.html  coin.component.ts
webapp-src/src/app/home/: home.component.html  home.component.ts
webapp-src/src/app/modal/: change-safe-key.component.ts  choose-icon.component.ts  confirm.component.ts  delete-safe.component.ts  edit-profile.component.ts  edit-safe.component.ts  export-coin.component.ts  generate-password.component.ts  history.component.ts  manage-safe.component.ts  message.component.ts  reset-password-safe.component.ts
webapp-src/src/app/oauth2-connect/: oauth2-connect.component.ts
webapp-src/src/app/row/: row.component.html  row.component.ts
webapp-src/src/app/safe/: safe.component.html  safe.component.ts
webapp-src/src/app/shared/: coin-filter.pipe.ts  coin.ts  hutch-api.service.ts  hutch-coin.service.ts  hutch-crypto.service.ts  hutch-profile.service.ts  hutch-random-word.service.ts  hutch-row.service.ts  hutch-safe.service.ts  profile.ts  safe.ts  wikimedia-commons.service.ts
webapp-src/src/lib/: APIManager.js  ErrorConfig.js  Notification.js  OIDCConnector.js  PrfCommon.js  Storage.js
webapp-src/src/public/: config.json  config.json.sample  index.html
webapp/css/: app.6442b951f219f9e41e50.css  app.6442b951f219f9e41e50.css.map  app.8478a64368d787986f87.css  app.8478a64368d787986f87.css.map  hutch.css
webapp/fonts/: forkawesome-ful-list.json
webapp/js/: app.6442b951f219f9e41e50.js  app.6442b951f219f9e41e50.js.map  app.8478a64368d787986f87.js  app.8478a64368d787986f87.js.map  polyfills.6442b951f219f9e41e50.js  polyfills.6442b951f219f9e41e50.js.map  polyfills.8478a64368d787986f87.js  polyfills.8478a64368d787986f87.js.map  vendor.6442b951f219f9e41e50.js  vendor.8478a64368d787986f87.js
webapp/js/jose/runtime/: encrypt.js
webapp/locales/en/: translations.json
webapp/locales/fr/: translations.json
webapp/src/app/: app.component.html  app.component.ts  app.module.ts
webapp/src/app/coin/: coin.component.html  coin.component.ts
webapp/src/app/home/: home.component.html  home.component.ts
webapp/src/app/modal/: change-safe-key.component.ts  choose-icon.component.ts  edit-profile.component.ts  edit-safe.component.ts  edit-tags.component.ts  export-coin.component.ts  generate-password.component.ts  manage-safe.component.ts  message.component.ts  reset-password-safe.component.ts
webapp/src/app/oauth2-connect/: oauth2-connect.component.ts  oauth2-connect.service.ts
webapp/src/app/row/: row.component.html  row.component.ts
webapp/src/app/safe/: safe.component.html  safe.component.ts
webapp/src/app/shared/: coin-filter.pipe.ts  coin.ts  hutch-api.service.ts  hutch-coin.service.ts  hutch-config.service.ts  hutch-crypto.service.ts  hutch-icon-list.service.ts  hutch-observe.service.ts  hutch-profile.service.ts  hutch-random-word.service.ts  profile.ts  (+4 more)
webapp/src/public/: config.json.sample  index.html
webapp/src/style/: app.scss
(+3 files in other folders)
